# memdynedition

./: .gitignore  .gitmodules  CMakeLists.txt  README.md
bash/: basicsample.sh  print.inc
modules/: CMakeLists.txt
modules/core/: CMakeLists.txt
modules/core/include/: bitopts.h  config.h  core.h  crc32.h  logger.h  menu.h  player.h  playerAntiCP.h  playerCP.h  playerCRC32.h  playerRS.h  securizer.h  securizerAntiCP.h  securizerCP.h  securizerCRC32.h  securizerRS.h
modules/core/src/: core.cpp  crc32.cpp  menu.cpp  player.cpp  playerAntiCP.cpp  playerCP.cpp  playerCRC32.cpp  playerRS.cpp  securizer.cpp  securizerAntiCP.cpp  securizerCP.cpp  securizerCRC32.cpp  securizerRS.cpp
samples/: CMakeLists.txt
samples/basic/: CMakeLists.txt  README.md
samples/basic/include/: menu.h
samples/basic/src/: main.cpp  menu.cpp
samples/crc32test/: CMakeLists.txt  README.md
samples/crc32test/include/: crc32sample.h
samples/crc32test/src/: crc32sample.cpp  main.cpp
samples/player/: CMakeLists.txt
samples/player/anticopy/: CMakeLists.txt  README.md
samples/player/anticopy/src/: main.cpp
samples/player/basic/: CMakeLists.txt  README.md
samples/player/basic/src/: main.cpp
samples/player/copy/: CMakeLists.txt  README.md
samples/player/copy/src/: main.cpp
samples/player/crc32/: CMakeLists.txt  README.md
samples/player/crc32/src/: main.cpp
samples/player/rs/: CMakeLists.txt  README.md
samples/player/rs/src/: main.cpp
samples/reedsolomon/rsfullrecovery/: CMakeLists.txt  README.md
samples/reedsolomon/rsfullrecovery/src/: main.cpp
samples/reedsolomon/rsstruct/: CMakeLists.txt  README.md
samples/reedsolomon/rsstruct/src/: main.cpp
samples/reedsolomon/rsusage/: CMakeLists.txt  README.md
samples/reedsolomon/rsusage/src/: main.cpp
